--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,16 @@
 # The git attributes and ignore files MUST be ASCII
 .gitattributes   zos-working-tree-encoding=iso8859-1 git-encoding=iso8859-1
 .gitignore       zos-working-tree-encoding=iso8859-1 git-encoding=iso8859-1
+
+
+*.pk !eol zos-working-tree-encoding=UTF-8
+*.build !eol zos-working-tree-encoding=UTF-8
+*.chm text !eol zos-working-tree-encoding=UTF-8
+*.cs text !eol zos-working-tree-encoding=UTF-8
+*.vcxproj text !eol zos-working-tree-encoding=UTF-8
+*.sln text !eol zos-working-tree-encoding=UTF-8
+
+#  "-text" tells git the file is binary.
+*.bin  -text zos-working-tree-encoding=UTF-8
+*.raw  -text zos-working-tree-encoding=UTF-8
+*.pdf  -text zos-working-tree-encoding=UTF-8
